Critical/check-view-secrets-role/.chainsaw-test/crb-good.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: goodcrb01
subjects:
- kind: ServiceAccount
  namespace: test4
  name: bar1
roleRef:
  kind: ClusterRole
  name: check-get-secrets
  apiGroup: rbac.authorization.k8s.io

---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: goodcrb02
subjects:
- kind: ServiceAccount
  namespace: test4
  name: bar2
roleRef:
  kind: ClusterRole
  name: check-list-secrets
  apiGroup: rbac.authorization.k8s.io
