Critical/check-view-secrets-role/.chainsaw-test/good-clusterrole.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: check-get-secrets
rules:
- apiGroups: ["*"]
  resources: ["secrets"]
  verbs: ["update"]

---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: check-list-secrets
rules:
- apiGroups: ["*"]
  resources: ["secrets"]
  verbs: ["update"]
