Critical/check-view-secrets-role/.chainsaw-test/good-role.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  namespace: test4
  name: check-get-secrets
rules:
- apiGroups: ["*"]
  resources: ["secrets"]
  verbs: ["update"]

---
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  namespace: test4
  name: check-list-secrets
rules:
- apiGroups: ["*"]
  resources: ["secrets"]
  verbs: ["update"]
