Critical/check-view-secrets-role/.chainsaw-test/rb-bad.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: badrb01
  namespace: test2
subjects:
- kind: ServiceAccount
  name: foo
  namespace: test2
roleRef:
  kind: Role
  name: check-get-secrets
  apiGroup: rbac.authorization.k8s.io

---
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: badrb02
  namespace: test2
subjects:
- kind: ServiceAccount
  name: foo
  namespace: test2
roleRef:
  kind: Role
  name: check-list-secrets
  apiGroup: rbac.authorization.k8s.io
