Critical/check-view-secrets-role/check-view-secrets-role.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-roles-with-view-secrets
  annotations:
    policies.kyverno.io/title: Check for ServiceAccounts with non compliant Roles/ClusterRoles which allows quering secrets.
    policies.kyverno.io/category: RBAC
    policies.kyverno.io/severity: critical
    policies.kyverno.io/minversion: 1.12.0
    kyverno.io/kyverno-version: 1.12.0
    kyverno.io/kubernetes-version: "1.22-1.23"
    policies.kyverno.io/subject: ClusterRoleBinding
    policies.kyverno.io/description: >-
      This policy will check for all the service accounts which are mapped with the Roles/ClusterRoles allowing a service account to query any secret resource.
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: check-get-secret-clusterrole
      match:
        any:
        - resources:
            kinds:
            - ClusterRoleBinding
      context:
        - name: role
          apiCall:
            urlPath: "/apis/rbac.authorization.k8s.io/v1/clusterroles/{{ request.object.roleRef.name }}"
      validate:
        message: >- 
           ClusterRoleBinding {{ request.object.metadata.name }} with subjects {{ request.object.subjects[].name }}
           is using role {{role.metadata.name}}
        deny:
          conditions:
            any:
              - key: "{{ (contains(role.rules[].verbs[], 'get') || contains(role.rules[].verbs[], 'list')) && contains(role.rules[].resources[], 'secrets') }}"
                operator: Equals
                value: true

    - name: check-get-secret-role
      match:
        any:
        - resources:
            kinds:
            - RoleBinding
      preconditions:
        any:
        - key: "{{ request.object.roleRef.kind || 'ClusterRole' }}"
          operator: NotEquals
          value: ClusterRole
      context:
        - name: role
          apiCall:
            urlPath: "/apis/rbac.authorization.k8s.io/v1/namespaces/{{ request.object.metadata.namespace }}/roles/{{ request.object.roleRef.name }}"
      validate:
        message: >- 
           RoleBinding {{ request.object.metadata.name }} with subjects {{ request.object.subjects[].name }}
           is using role {{role.metadata.name}}
        deny:
          conditions:
            any:
              - key: "{{ (contains(role.rules[].verbs[], 'get') || contains(role.rules[].verbs[], 'list')) && contains(role.rules[].resources[], 'secrets') }}"
                operator: Equals
                value: true
