Critical/check-view-secrets-role/.chainsaw-test/chainsaw-step-01-assert-1.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-roles-with-view-secrets
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
